--- a/sass-2/desktop/bombones/_section-1-bombones.scss
+++ b/sass-2/desktop/bombones/_section-1-bombones.scss
@@ -16,6 +16,13 @@
             margin: 0px;
             position: absolute;
             margin-top: 3%;
+            transition: all 2s;
+            transition-property: all;
+            transition-duration: 2s;
+
+        }
+        .imagen-2-bombones:hover{
+            transform: rotate(360deg) scale(2);
         }
     }
 }
