--- a/sass-2/desktop/bombones/_section-1-bombones.scss
+++ b/sass-2/desktop/bombones/_section-1-bombones.scss
@@ -4,10 +4,11 @@
     flex-wrap: wrap;
 
     .fondo-imagen-bombones {
+        margin-top: 10%;
         display: flex;
         justify-content: center;
-        width: 30%;
-        height: 300px;
+        width: 31%;
+        height: 450px
 
         .imagen-2-bombones {
             border-radius: 30px;
