--- a/sass-2/desktop/bombones/_section-1-bombones.scss
+++ b/sass-2/desktop/bombones/_section-1-bombones.scss
@@ -22,7 +22,7 @@
 
         }
         .imagen-2-bombones:hover{
-            transform: rotate(360) scale(2);
+            transform: rotate(360deg) scale(2);
         }
-    }
+    }  
 }
