--- a/css3/styles.css
+++ b/css3/styles.css
@@ -1,4 +1,4 @@
-.seccion-1-bombones, .seccion1, header .titulo-audio-buscador {
+.seccion-1-bombones, .seccion-1-blanco, .seccion1, header .titulo-audio-buscador {
   display: flex;
   justify-content: center;
 }
@@ -18,7 +18,7 @@
 }
 
 /*mixin*/
-.seccion-1-bombones, .seccion1, header .titulo-audio-buscador {
+.seccion-1-bombones, .seccion-1-blanco, .seccion1, header .titulo-audio-buscador {
   display: flex;
   justify-content: center;
 }
@@ -278,6 +278,32 @@ main .carousel-inner {
 .main-chocolates-blancos {
   background-image: url(https://www.vegrecetas.com/wp-content/uploads/chocolate-blanco-vegan.jpg);
 }
+.seccion-1-blanco {
+  background-color: #B94E02;
+  flex-wrap: wrap;
+}
+.seccion-1-blanco .fondo-imagen-blanco {
+  display: flex;
+  justify-content: center;
+  width: 31%;
+  height: 450px;
+  margin-top: 10%;
+}
+.seccion-1-blanco .fondo-imagen-blanco .imagen-2-blanco {
+  border-radius: 30px;
+  width: 18%;
+  height: 240px;
+  margin: 0px;
+  position: absolute;
+  margin-top: 3%;
+  transition: all 2s;
+  transition-property: all;
+  transition-duration: 2s;
+}
+.seccion-1-blanco .fondo-imagen-blanco .imagen-2-blanco:hover {
+  transform: rotate(360deg) scale(2);
+}
+
 .main-bombones {
   background-image: url(../recursos/imagenes/bombones/principal2.jpeg);
 }
