--- a/sass-2/styles.scss
+++ b/sass-2/styles.scss
@@ -10,6 +10,7 @@
 @import"desktop/chocolates-semiamargo/main-chocolates-semiamargo";
 @import"desktop/chocolates-con-leche/main-chocolates-conleche";
 @import"desktop/chocolates-blancos/main-chocolates-blancos";
+@import"desktop/chocolates-blancos/section-1-chocolatesblancos";
 @import"desktop/bombones/main-bombones";
 @import"desktop/bombones/section-1-bombones";
 @import"desktop/sin-tacc/_main-sin-tacc";
