--- a/sass-2/styles.scss
+++ b/sass-2/styles.scss
@@ -8,12 +8,15 @@
 @import"desktop/index-principal/seccion4";
 @import"desktop/index-principal/footer";
 @import"desktop/chocolates-semiamargo/main-chocolates-semiamargo";
+@import"desktop/chocolates-semiamargo/section-1-chocolatessemiamargo";
 @import"desktop/chocolates-con-leche/main-chocolates-conleche";
+@import"desktop/chocolates-con-leche/section-1-chocolates-con-leche";
 @import"desktop/chocolates-blancos/main-chocolates-blancos";
 @import"desktop/chocolates-blancos/section-1-chocolatesblancos";
 @import"desktop/bombones/main-bombones";
 @import"desktop/bombones/section-1-bombones";
 @import"desktop/sin-tacc/_main-sin-tacc";
+@import"desktop/sin-tacc/section-1-chocolates-sintaac";
 //Mobile
 @import"mobile/index-principal/header";
 @import"mobile/index-principal/main";
