--- a/css3/styles.css
+++ b/css3/styles.css
@@ -440,9 +440,19 @@ main .carousel-inner {
     background-color: #5e2903;
     padding-top: 1%;
   }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .buscador .buscador-2 {
+    width: 15%;
+    padding: 0px 0px;
+    font-size: 40%;
+    line-height: 0%;
+    height: 10px;
+  }
   header .titulo-audio-buscador .titulo-audio-buscador-2 .buscador .color-boton {
     color: red;
     border-color: red;
+    width: 10%;
+    height: 10px;
+    font-size: 5px;
   }
   header .titulo-audio-buscador .titulo-audio-buscador-2 .buscador .color-boton:hover {
     background-color: chocolate;
