--- a/css3/styles.css
+++ b/css3/styles.css
@@ -691,6 +691,28 @@ main .carousel-inner {
   }
 }
 @media only screen and (max-width: 480px) {
+  .seccion-1-semiamargo {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-semiamargo .fondo-imagen-semiamargo {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-semiamargo .fondo-imagen-semiamargo .imagen-2-semiamargo {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
+  }
+}
+@media only screen and (max-width: 480px) {
   .main-chocolates-con-leche {
     background-image: url(https://www.lagacetadesalamanca.es/binrepository/1200x676/0c39/1200d597/none/25207907/FPVF/chocolate_1-2815694_20210706085334.jpg);
     background-color: chocolate;
@@ -706,6 +728,28 @@ main .carousel-inner {
   }
 }
 @media only screen and (max-width: 480px) {
+  .seccion-1-con-leche {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-con-leche .fondo-imagen-con-leche {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-con-leche .fondo-imagen-con-leche .imagen-2-con-leche {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
+  }
+}
+@media only screen and (max-width: 480px) {
   .main-chocolates-blancos {
     background-image: url(https://www.vegrecetas.com/wp-content/uploads/chocolate-blanco-vegan.jpg);
     background-color: chocolate;
@@ -718,6 +762,28 @@ main .carousel-inner {
     font-size: 160%;
     color: whitesmoke;
     padding-left: 1%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion-1-blanco {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-blanco .fondo-imagen-blanco {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-blanco .fondo-imagen-blanco .imagen-2-blanco {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
   }
 }
 @media only screen and (max-width: 480px) {
@@ -771,6 +837,28 @@ main .carousel-inner {
     font-size: 160%;
     color: whitesmoke;
     padding-left: 1%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion-1-sintaac {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-sintaac .fondo-imagen-sintaac {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-sintaac .fondo-imagen-sintaac .imagen-2-sintaac {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
   }
 }
 
