--- a/sass-2/styles.scss
+++ b/sass-2/styles.scss
@@ -35,4 +35,21 @@
 @import"mobile/bombones/seccion-1-bombones";
 @import"mobile/sin-tacc/_main-sin-tacc";
 @import"mobile/sin-tacc/seccion-1-chocolates-sin-taac";
-@import"medias-queris-tablets";
+//Tablet
+@import"tablet/index-principal/header";
+@import"tablet/index-principal/main";
+@import"tablet/index-principal/seccion1";
+@import"tablet/index-principal/seccion2";
+@import"tablet/index-principal/seccion3";
+@import"tablet/index-principal/seccion4";
+@import"tablet/index-principal/footer";
+@import"tablet/chocolates-semiamargo/main-chocolates-semiamargo";
+@import"tablet/chocolates-semiamargo/seccion-1-chocolates-semiamargo";
+@import"tablet/chocolates-con-leche/main-chocolates-con-leche";
+@import"tablet/chocolates-con-leche/seccion-1-chocolates-con-leche";
+@import"tablet/chocolates-blancos/main-chocolates-blancos";
+@import"tablet/chocolates-blancos/seccion-1-chocolates-blancos";
+@import"tablet/bombones/main-bombones";
+@import"tablet/bombones/seccion-1-bombones";
+@import"tablet/sin-tacc/_main-sin-tacc";
+@import"tablet/sin-tacc/seccion-1-chocolates-sin-taac";
