--- a/css3/styles.css
+++ b/css3/styles.css
@@ -861,5 +861,452 @@ main .carousel-inner {
     margin-top: 6%;
   }
 }
+@media only screen and (min-width: 481px) and (max-widht: 960px) {
+  header {
+    background-color: #5e2903;
+    padding-top: 1%;
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    margin-bottom: 5%;
+  }
+  header .titulo-audio-buscador {
+    display: flex;
+    justify-content: center;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 {
+    display: flex;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    width: 100%;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .buscador {
+    width: 25%;
+    background-color: #5e2903;
+    padding-top: 2%;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .buscador .buscador-2 {
+    width: 30px;
+    padding: 0px 0px;
+    font-size: 40%;
+    line-height: 0%;
+    height: 10px;
+    margin-right: 0%;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .buscador .color-boton {
+    color: red;
+    border-color: red;
+    height: 20px;
+    font-size: 11px;
+    padding: 0px 0px;
+    width: 60%;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .buscador .color-boton:hover {
+    background-color: chocolate;
+    color: red;
+    border-color: red;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .titulo-principal {
+    width: 100%;
+    height: 50px;
+    margin-left: -10%;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .carrito-audio {
+    color: white;
+    font-size: 90%;
+    display: flex;
+    justify-content: space-between;
+    width: 10%;
+  }
+  header .titulo-audio-buscador .titulo-audio-buscador-2 .carrito-audio audio {
+    width: 73%;
+    padding-top: 12%;
+    height: 26%;
+  }
+  header .menu-general {
+    padding-top: 0%;
+  }
+  header .menu-general .lucas {
+    display: flex;
+    justify-content: flex-start;
+    width: 100%;
+    padding-left: 2%;
+    padding-right: 0%;
+  }
+  header .menu-general .lucas .menu-general-2 {
+    width: 20%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+  }
+  header .menu-general .lucas .menu {
+    background-color: transparent;
+    font-size: 40%;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    text-transform: uppercase;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    display: inline-block;
+    text-decoration: none;
+  }
+  header .menu-general .lucas .menu:hover {
+    transform: scale(1.2);
+    background-color: darkred;
+    color: chocolate;
+    border-radius: 0.5rem;
+  }
+}
+@media only screen and (max-width: 480px) {
+  main {
+    margin-top: -4%;
+  }
+  main .carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    height: 181px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion1 {
+    display: flex;
+    justify-content: center;
+  }
+  .seccion1 .fondo-imagen {
+    display: flex;
+    justify-content: space-evenly;
+    width: 25%;
+    height: 90px;
+  }
+  .seccion1 .fondo-imagen .imagen1 {
+    border-radius: 0%;
+    width: 20%;
+    height: 75px;
+    margin: 0px;
+    position: absolute;
+  }
+  .seccion1 .fondo-imagen .imagen2 {
+    border-radius: 0%;
+    width: 20%;
+    height: 75px;
+    margin: 0px;
+    position: absolute;
+  }
+
+  .imagen1 {
+    background-color: darkred;
+  }
+
+  .imagen2 {
+    transition: all 1s;
+  }
+
+  .imagen2:hover {
+    transform: translate(25px, 25px);
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion2 {
+    background-color: chocolate;
+    padding-bottom: 1%;
+  }
+  .seccion2 .frace {
+    font-family: "Gentium Book Basic", serif;
+    text-align: center;
+    font-size: 160%;
+    padding: 0% 0% 4% 0%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion3 {
+    text-align: center;
+    background-color: chocolate;
+  }
+  .seccion3 .video-index {
+    width: 75%;
+    padding-bottom: 5%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion4 {
+    background-color: #D2691E;
+    font-size: 60%;
+    font-family: "Castoro", serif;
+    text-transform: uppercase;
+    letter-spacing: 0px;
+    color: #000000;
+    padding: 1% 0% 0% 0%;
+    display: flex;
+    justify-content: space-around;
+  }
+  .seccion4 h3 {
+    font-size: 120%;
+  }
+  .seccion4 .icono {
+    font-size: 230%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .grid-container {
+    display: grid;
+    grid-template-columns: 0% 20% 34% 26% 14%;
+    grid-auto-rows: 90px;
+    grid-gap: 4px;
+    background-color: #5E2903;
+    padding-top: 1%;
+  }
+  .grid-container .lcdth {
+    display: block;
+    justify-content: center;
+    flex-wrap: revert;
+    background-color: transparent;
+    font-size: 50%;
+    font-family: "Castoro", serif;
+    text-transform: uppercase;
+    letter-spacing: 0px;
+    color: #000000;
+  }
+  .grid-container .lcdtt {
+    padding-left: 0%;
+  }
+  .grid-container .lista {
+    list-style: none;
+    padding-left: 0%;
+  }
+  .grid-container .lista .sublista {
+    display: inherit;
+  }
+  .grid-container .lista .sublista .menu2 {
+    color: white;
+    font-size: 4px;
+    font-family: "Castoro", serif;
+    text-transform: uppercase;
+    letter-spacing: 0px;
+    text-decoration: none;
+  }
+  .grid-container .lista .sublista .menu2:hover {
+    text-decoration: underline;
+    color: white;
+  }
+  .grid-container .lista-2 {
+    padding-left: 1%;
+    list-style: none;
+  }
+  .grid-container .lista-2 .sublista-2 {
+    background-color: transparent;
+    font-size: 4px;
+    font-family: "Castoro", serif;
+    text-transform: uppercase;
+    letter-spacing: 0px;
+    color: #FFFFFF;
+    text-decoration: none;
+  }
+  .grid-container .mediosdepago-1 {
+    display: block;
+  }
+  .grid-container .mediosdepago-1 .mediosdepago-2 {
+    width: 15%;
+  }
+  .grid-container .lista-3 {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+    width: 30%;
+    padding-left: 0%;
+  }
+  .grid-container .lista-3 .sublista-3 {
+    font-size: 200%;
+    color: black;
+    letter-spacing: 4px;
+    text-decoration: none;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .main-chocolates-semiamargo {
+    background-image: url(../recursos/imagenes/chocolatessemiamargo/principal.jpg);
+    background-color: chocolate;
+    padding: 16% 0% 16% 0%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .main-chocolates-semiamargo .h1-chocolates-semiamargo {
+    font-family: "Gentium Book Basic", serif;
+    font-size: 160%;
+    color: whitesmoke;
+    padding-left: 1%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion-1-semiamargo {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-semiamargo .fondo-imagen-semiamargo {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-semiamargo .fondo-imagen-semiamargo .imagen-2-semiamargo {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .main-chocolates-con-leche {
+    background-image: url(https://www.lagacetadesalamanca.es/binrepository/1200x676/0c39/1200d597/none/25207907/FPVF/chocolate_1-2815694_20210706085334.jpg);
+    background-color: chocolate;
+    padding: 16% 0% 16% 0%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .main-chocolates-con-leche .h1-chocolates-con-leche {
+    font-family: "Gentium Book Basic", serif;
+    font-size: 160%;
+    color: whitesmoke;
+    padding-left: 1%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion-1-con-leche {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-con-leche .fondo-imagen-con-leche {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-con-leche .fondo-imagen-con-leche .imagen-2-con-leche {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .main-chocolates-blancos {
+    background-image: url(https://www.vegrecetas.com/wp-content/uploads/chocolate-blanco-vegan.jpg);
+    background-color: chocolate;
+    padding: 16% 0% 16% 0%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .main-chocolates-blancos .h1-chocolates-blancos {
+    font-family: "Gentium Book Basic", serif;
+    font-size: 160%;
+    color: whitesmoke;
+    padding-left: 1%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion-1-blanco {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-blanco .fondo-imagen-blanco {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-blanco .fondo-imagen-blanco .imagen-2-blanco {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .main-bombones {
+    background-image: url(../recursos/imagenes/bombones/principal2.jpeg);
+    background-color: chocolate;
+    padding: 16% 0% 16% 0%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .main-bombones .h1-bombones {
+    font-family: "Gentium Book Basic", serif;
+    font-size: 160%;
+    color: whitesmoke;
+    padding-left: 1%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion-1-bombones {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-bombones .fondo-imagen-bombones {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-bombones .fondo-imagen-bombones .imagen-2-bombones {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .main-sin-tacc {
+    background-image: url(https://images.clarin.com/2016/02/10/mamuschka-hace-chocolates-sin-tacc___Hkbfo5FEx_720x0.jpg);
+    background-position-y: 18%;
+    background-color: chocolate;
+    padding: 16% 0% 16% 0%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .main-sin-tacc .h1-sin-tacc {
+    font-family: "Gentium Book Basic", serif;
+    font-size: 160%;
+    color: whitesmoke;
+    padding-left: 1%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .seccion-1-sintaac {
+    background-color: #B94E02;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  .seccion-1-sintaac .fondo-imagen-sintaac {
+    display: flex;
+    justify-content: center;
+    width: 31%;
+    height: 190px;
+  }
+  .seccion-1-sintaac .fondo-imagen-sintaac .imagen-2-sintaac {
+    border-radius: 10px;
+    width: 20%;
+    height: 110px;
+    margin: 0px;
+    position: absolute;
+    margin-top: 6%;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
