--- a/sass-2/tablet/index-principal/_header.scss
+++ b/sass-2/tablet/index-principal/_header.scss
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 481px) and (max-widht: 960px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
 
     header {
         background-color: #5e2903;
