--- a/css3/styles.css
+++ b/css3/styles.css
@@ -861,7 +861,7 @@ main .carousel-inner {
     margin-top: 6%;
   }
 }
-@media only screen and (min-width: 481px) and (max-widht: 960px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   header {
     background-color: #5e2903;
     padding-top: 1%;
