--- a/css3/styles.css
+++ b/css3/styles.css
@@ -957,7 +957,7 @@ main .carousel-inner {
     border-radius: 0.5rem;
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   main {
     margin-top: -4%;
   }
