--- a/css3/styles.css
+++ b/css3/styles.css
@@ -968,7 +968,7 @@ main .carousel-inner {
     height: 477px;
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   .seccion1 {
     display: flex;
     justify-content: center;
