--- a/css3/styles.css
+++ b/css3/styles.css
@@ -1006,15 +1006,18 @@ main .carousel-inner {
     transform: translate(25px, 25px);
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   .seccion2 {
     background-color: chocolate;
-    padding-bottom: 1%;
+    padding-bottom: 6%;
+    padding-top: 1%;
+    margin-top: -1%;
+    margin-bottom: -1%;
   }
   .seccion2 .frace {
     font-family: "Gentium Book Basic", serif;
     text-align: center;
-    font-size: 160%;
+    font-size: 250%;
     padding: 0% 0% 4% 0%;
   }
 }
