--- a/sass-2/tablet/index-principal/_seccion2.scss
+++ b/sass-2/tablet/index-principal/_seccion2.scss
@@ -1,13 +1,16 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
 
     .seccion2 {
         background-color: chocolate;
-        padding-bottom: 1%;
+        padding-bottom: 6%;
+        padding-top: 1%;
+        margin-top: -1%;
+        margin-bottom: -1%;
 
         .frace {
             font-family: "Gentium Book Basic", serif;
             text-align: center;
-            font-size: 160%;
+            font-size: 250%;
             padding: 0% 0% 4% 0%;
         }
     }
