--- a/css3/styles.css
+++ b/css3/styles.css
@@ -1021,25 +1021,26 @@ main .carousel-inner {
     padding: 0% 0% 4% 0%;
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   .seccion3 {
     text-align: center;
     background-color: chocolate;
+    margin-top: -1%;
   }
   .seccion3 .video-index {
-    width: 75%;
+    width: 60%;
     padding-bottom: 5%;
   }
 }
 @media only screen and (max-width: 480px) {
   .seccion4 {
     background-color: #D2691E;
-    font-size: 60%;
+    font-size: 100%;
     font-family: "Castoro", serif;
     text-transform: uppercase;
     letter-spacing: 0px;
     color: #000000;
-    padding: 1% 0% 0% 0%;
+    padding: 2% 0% 5% 0%;
     display: flex;
     justify-content: space-around;
   }
