--- a/sass-2/tablet/index-principal/_seccion3.scss
+++ b/sass-2/tablet/index-principal/_seccion3.scss
@@ -1,11 +1,11 @@
-@media only screen and (max-width: 480px) {
-
+@media only screen and (min-width: 481px) and (max-width: 960px) {
     .seccion3 {
         text-align: center;
         background-color: chocolate;
+        margin-top: -1%;
 
         .video-index {
-            width: 75%;
+            width: 60%;
             padding-bottom: 5%;
         }
     }
