--- a/sass-2/tablet/index-principal/_seccion3.scss
+++ b/sass-2/tablet/index-principal/_seccion3.scss
@@ -2,7 +2,7 @@
     .seccion3 {
         text-align: center;
         background-color: chocolate;
-        margin-top: -1%;
+        margin-bottom: -1%;
 
         .video-index {
             width: 60%;
