--- a/css3/styles.css
+++ b/css3/styles.css
@@ -1025,14 +1025,14 @@ main .carousel-inner {
   .seccion3 {
     text-align: center;
     background-color: chocolate;
-    margin-top: -1%;
+    margin-bottom: -1%;
   }
   .seccion3 .video-index {
     width: 60%;
     padding-bottom: 5%;
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   .seccion4 {
     background-color: #D2691E;
     font-size: 100%;
