--- a/sass-2/tablet/index-principal/_seccion4.scss
+++ b/sass-2/tablet/index-principal/_seccion4.scss
@@ -1,5 +1,4 @@
-@media only screen and (max-width: 480px) {
-
+@media only screen and (min-width: 481px) and (max-width: 960px) {
     .seccion4 {
         background-color: #D2691E;
         font-size: 100%;
