--- a/css3/styles.css
+++ b/css3/styles.css
@@ -1051,11 +1051,11 @@ main .carousel-inner {
     font-size: 230%;
   }
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
   .grid-container {
     display: grid;
     grid-template-columns: 0% 20% 34% 26% 14%;
-    grid-auto-rows: 90px;
+    grid-auto-rows: 180px;
     grid-gap: 4px;
     background-color: #5E2903;
     padding-top: 1%;
@@ -1065,25 +1065,25 @@ main .carousel-inner {
     justify-content: center;
     flex-wrap: revert;
     background-color: transparent;
-    font-size: 50%;
+    font-size: 75%;
     font-family: "Castoro", serif;
     text-transform: uppercase;
     letter-spacing: 0px;
     color: #000000;
   }
   .grid-container .lcdtt {
-    padding-left: 0%;
+    padding-left: 10%;
   }
   .grid-container .lista {
     list-style: none;
-    padding-left: 0%;
+    padding-left: 1%;
   }
   .grid-container .lista .sublista {
     display: inherit;
   }
   .grid-container .lista .sublista .menu2 {
     color: white;
-    font-size: 4px;
+    font-size: 10px;
     font-family: "Castoro", serif;
     text-transform: uppercase;
     letter-spacing: 0px;
