--- a/sass-2/tablet/chocolates-con-leche/_seccion-1-chocolates-con-leche.scss
+++ b/sass-2/tablet/chocolates-con-leche/_seccion-1-chocolates-con-leche.scss
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 480px) {
+@media only screen and (min-width: 481px) and (max-width: 960px) {
     .seccion-1-con-leche {
         background-color: #B94E02;
         display: flex;
