--- a/sass-2/tablet/bombones/_seccion-1-bombones.scss
+++ b/sass-2/tablet/bombones/_seccion-1-bombones.scss
@@ -4,7 +4,7 @@
         background-color: #B94E02;
         display: flex;
         justify-content: center;
-
+        padding-bottom: 17%;
         flex-wrap: wrap;
 
         .fondo-imagen-bombones {
