--- a/sass-2/tablet/bombones/_main-bombones.scss
+++ b/sass-2/tablet/bombones/_main-bombones.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 480px) {
     .main-bombones {
-        background-image: url(../recursos/imagenes/bombones/principal2.jpeg);
+        background-image: url(../../../recursos/imagenes/bombones/principal2.jpeg);
         background-color: chocolate;
         padding: 16% 0% 16% 0%;
         background-repeat: no-repeat;
