--- a/sass-2/desktop/bombones/_main-bombones.scss
+++ b/sass-2/desktop/bombones/_main-bombones.scss
@@ -1,5 +1,5 @@
 .main-bombones {
-    background-image: url(../recursos/imagenes/bombones/principal2.jpeg);
+    background-image: url(../../../recursos/imagenes/bombones/principal2.jpeg);
     @extend %estilos-general-main;
 
     .h1-bombones {
